2010-02-04  David Reveman  <davidr@novell.com>

	* effect.cpp: Track changes to gallium.
	Cleanup inclusion of gallium headers.
	Improve blur filter performance, clamp radius to 20.0 and
	adjust gaussian function parameters to better match silverlight.

2010-02-03  David Reveman  <davidr@novell.com>

	* effect.cpp (UpdateShader): Implement SINCOS instruction as a macro.
	(UpdateShader): Minor improvement to SINCOS error check.
	(UpdateShader): Simplify parameter handling.
	Remove ureg_d3d_dst and ureg_d3d_src.
	(UpdateShader): Add bias source register modifier.

2010-02-03  Larry Ewing  <lewing@novell.com>

	* uielement.cpp (PostRender): only apply the effects pass if
	RUNTIME_INIT_ENABLE_EFFECTS is set.

	* runtime.cpp, runtime.h: Add an override for effects=no/yes to
	manually disable pixel shaders at runtime.

2010-02-03  Andreia Gaita  <avidigal@novell.com>

	* cbinding.cpp, cbinding.h, dependencyproperty.g.cpp,
	type-generated.cpp, type.h, value.h:
	remove autogenerated files from the repo, as part of making the
	generator step automatic

2010-02-03  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: revert r150361 as we do actually need to
	  unfocus the warning/drm messages.

2010-02-03  Chris Toshok  <toshok@ximian.com>

	* animation.cpp, brush.cpp, dirty.cpp, geometry.cpp, grid.cpp,
	mediaelement.cpp, multiscaleimage.cpp, panel.cpp, provider.cpp,
	runtime.cpp, stylus.cpp, textblock.cpp, timeline.cpp,
	transform.cpp, uielement.cpp: hoist Collection::GetCount() out of
	loops.

	* timemanager.h,cpp: maintain a ref to a single RenderingEventArgs
	instance and pass that for every RenderEvent.

	* eventargs.h,cpp: RenderingEventArgs aren't created with their
	TimeSpan now, we set them after.  This allows us to reuse them in
	TimeManager.

	* dependencyobject.h,cpp: use a bitmask for which providers have
	values for a given property to do fewer provider lookups.  Also
	add some diagnostics for the number of property vs. provider
	lookups we're doing.
