@@ -1,5 +1,9 @@
 2010-02-04  David Reveman  <davidr@novell.com>
 
+	* effect.cpp:
+	* effect.h: Fix 64bit support. Shader tokens are uint32 and not
+	unsigned long.
+
 	* effect.cpp: Track changes to gallium.
 	Cleanup inclusion of gallium headers.
 	Improve blur filter performance, clamp radius to 20.0 and
